--- a/knowledge_graph_v2.adoc
+++ b/knowledge_graph_v2.adoc
@@ -327,6 +327,8 @@ MATCH (n) RETURN n;
 
          |      Comp. Thinking       |       Data      |      Security      |      Internet       |       Hardware      |
 
+    Fields can only have overview comments (i.e. no exercises) and links to books etc
+
   - *Themes* (e.g. Web)
     
     `Themes' are higher level concepts but ultimately belong under one or more of the `Fields'. Themes but are too conceptual to be classified as `Topics'.  `Themes' should be well known for us to decide which ones need to be covered/explored.
@@ -337,6 +339,8 @@ MATCH (n) RETURN n;
     Front-end is a Theme, but it is nested under Web.
     Machine Learning is a Theme, but it is nested under Statistics.
     Unsupervised Machine Learning is a Theme, but it is nested under Machine Learning.
+    
+    Themes can only have overview comments
 
   - *Topics* (e.g. html, css) 
   
@@ -412,12 +416,28 @@ It's the backbone:
               .......
   All of these should have their own document store, get their own nodes on the graph. Each has its own importance score, weight, difficulty level....
   
-  *This gives flexibility for different types of user and different delivery methods*
+  *This gives flexibility for different types of user and different delivery methods and contextualisation*
+
+anchor:anchor-2[]
 
 == Next Steps
 
+//list
+[loweralpha]
+. Add content either on graph or in MongoDB
+. Use existing Decoded content to start with? (16 steps, slides,...?)
+. Which parts of the graph and to what depth?
+
+  We can have a light version everywhere (and then start testing an algorithm sooner, e.g. a Markov Chain) OR pick one subsection of the graph and add more advanced content, test links to external material etc sooner.
+
+anchor:anchor-2[]
+
 == Also...
 
+//list
+[loweralpha]
+. Servers
+. Themes
 
 
 
