--- a/knowledge_graph_v2.adoc
+++ b/knowledge_graph_v2.adoc
@@ -425,7 +425,7 @@ anchor:anchor-2[]
 //list
 [loweralpha]
 . Add content either on graph or in MongoDB {nbsp}
-{nbsp}
+{nbsp} +
 . Use existing Decoded content to start with? (16 steps, slides,...?)
 
 . Which parts of the graph and to what depth?
