--- a/knowledge_graph_v2.adoc
+++ b/knowledge_graph_v2.adoc
@@ -475,6 +475,8 @@ anchor:anchor-2[]
 
 E) Queryability: brainstorm types of questions we want to ask the graph
 
+  Like the examples above. This test whether the graph architecture accommodates the types of functions that we want it for.
+
 
 
 
